--- a/subsys/zigbee/Kconfig
+++ b/subsys/zigbee/Kconfig
@@ -16,6 +16,7 @@ menuconfig ZIGBEE
 	imply FLASH_PAGE_LAYOUT
 	imply FLASH_MAP
 	imply MPU_ALLOW_FLASH_WRITE
+	depends on SOC_NRF52840 && CPU_HAS_FPU
 
 if ZIGBEE
 
