--- a/tests/subsys/zigbee/osif/crypto/testcase.yaml
+++ b/tests/subsys/zigbee/osif/crypto/testcase.yaml
@@ -1,4 +1,4 @@
 tests:
   zigbee.osif.logger:
-    platform_whitelist: nrf52840_pca10056
+    platform_whitelist: nrf52840dk_nrf52840
     tags: osif_crypto
