--- a/tests/subsys/zigbee/osif/timer/testcase.yaml
+++ b/tests/subsys/zigbee/osif/timer/testcase.yaml
@@ -1,4 +1,4 @@
 tests:
   zigbee.osif.timer:
-    platform_whitelist: nrf52840_pca10056
+    platform_whitelist: nrf52840dk_nrf52840
     tags: zigbee_osif
