--- a/tests/subsys/zigbee/zboss_api/callback_api/testcase.yaml
+++ b/tests/subsys/zigbee/zboss_api/callback_api/testcase.yaml
@@ -1,4 +1,4 @@
 tests:
   zigbee.zboss_api.callback_api:
-    platform_whitelist: nrf52840_pca10056
+    platform_whitelist: nrf52840dk_nrf52840
     tags: zboss_api_callback
