zigbee: put zigbee files in a separate zephyr lib
Make zigbee header files available in app lib by adding
APP_LINK_WITH_ZIGBEE Kconfig option

Signed-off-by: Maciej Fabia <maciej.fabia@nordicsemi.no>

--- a/subsys/zigbee/CMakeLists.txt
+++ b/subsys/zigbee/CMakeLists.txt
@@ -4,18 +4,26 @@
 # SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 #
 
-zephyr_include_directories(common)
-zephyr_include_directories(osif)
-zephyr_include_directories(zb_error)
+zephyr_interface_library_named(zigbee)
+
+target_include_directories(zigbee INTERFACE common)
+target_include_directories(zigbee INTERFACE osif)
+target_include_directories(zigbee INTERFACE zb_error)
+
+zephyr_library()
+
+zephyr_library_link_libraries(zigbee)
 
 # Source files
-zephyr_sources(osif/zb_nrf_platform.c)
-zephyr_sources(osif/zb_nrf_logger.c)
-zephyr_sources(osif/zb_nrf_nvram.c)
-zephyr_sources(osif/zb_nrf_timer.c)
-zephyr_sources(osif/zb_nrf_transceiver.c)
-zephyr_sources(osif/zb_nrf_crypto.c)
-zephyr_sources(osif/zb_nrf_pwr_mgmt.c)
-zephyr_sources(osif/nrf_ecb_driver.c)
-zephyr_sources(common/zigbee_helpers.c)
-zephyr_sources(common/zigbee_logger_eprxzcl.c)
+zephyr_library_sources(osif/zb_nrf_platform.c)
+zephyr_library_sources(osif/zb_nrf_logger.c)
+zephyr_library_sources(osif/zb_nrf_nvram.c)
+zephyr_library_sources(osif/zb_nrf_timer.c)
+zephyr_library_sources(osif/zb_nrf_transceiver.c)
+zephyr_library_sources(osif/zb_nrf_crypto.c)
+zephyr_library_sources(osif/zb_nrf_pwr_mgmt.c)
+zephyr_library_sources(osif/nrf_ecb_driver.c)
+zephyr_library_sources(common/zigbee_helpers.c)
+zephyr_library_sources(common/zigbee_logger_eprxzcl.c)
+
+zephyr_library_link_libraries(zboss)
