--- a/tests/subsys/zigbee/zboss_api/callback_api/CMakeLists.txt
+++ b/tests/subsys/zigbee/zboss_api/callback_api/CMakeLists.txt
@@ -4,12 +4,9 @@
 # SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 #
 
-cmake_minimum_required(VERSION 3.8)
+cmake_minimum_required(VERSION 3.13.1)
 
-add_definitions(-Wno-packed-bitfield-compat)
-add_definitions(-DTIMER_DEFAULT_CONFIG_IRQ_PRIORITY=6)
-
-include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
+find_package(Zephyr HINTS $ENV{ZEPHYR_BASE})
 
 project(NONE)
 
