zigbee: Kconfig: remove comment #TBD
Signed-off-by: Maciej Fabia <maciej.fabia@nordicsemi.no>

--- a/subsys/zigbee/Kconfig
+++ b/subsys/zigbee/Kconfig
@@ -79,7 +79,7 @@ config ZBOSS_DEFAULT_THREAD_PRIORITY
 
 config ZBOSS_DEFAULT_THREAD_STACK_SIZE
 	int "Stack size of ZBOSS Zephyr task"
-	default 2048    #ToDo: TBD
+	default 2048
 	help
 	  Stack size of ZBOSS Zephyr task. This is the task zboss_main_loop_iteration is called from.
 
