zigbee: Add nrf52833dk_nrf52833 support
Signed-off-by: Maciej Fabia <maciej.fabia@nordicsemi.no>

--- a/subsys/zigbee/Kconfig
+++ b/subsys/zigbee/Kconfig
@@ -6,8 +6,8 @@
 
 menuconfig ZIGBEE
 	bool "Enable Zigbee stack"
-	select FLOAT
 	select APP_LINK_WITH_ZBOSS
+	imply FLOAT
 	imply COUNTER
 	imply COUNTER_TIMER3
 	imply NRF_802154_RADIO_DRIVER
@@ -17,7 +17,7 @@ menuconfig ZIGBEE
 	imply FLASH_PAGE_LAYOUT
 	imply FLASH_MAP
 	imply MPU_ALLOW_FLASH_WRITE
-	depends on SOC_NRF52840 && CPU_HAS_FPU
+	depends on (SOC_NRF52840 || SOC_NRF52833) && CPU_HAS_FPU
 
 if ZIGBEE
 
