zigbee: Add partition manager support, 1st draft
todo: rebase

--- a/samples/zigbee/light_bulb/prj.conf
+++ b/samples/zigbee/light_bulb/prj.conf
@@ -26,7 +26,7 @@ CONFIG_ZIGBEE_ROLE_ROUTER=y
 
 # Enable bonding
 CONFIG_NVS=y
-CONFIG_SETTINGS=y
+CONFIG_SETTINGS=n
 
 # Enable DK LED and Buttons library
 CONFIG_DK_LIBRARY=y
