--- a/samples/zigbee/light_switch/prj.conf
+++ b/samples/zigbee/light_switch/prj.conf
@@ -29,8 +29,15 @@ CONFIG_DK_LIBRARY=y
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 # Enable nRF ECB driver
-CONFIG_CRYPTO=y
-CONFIG_CRYPTO_NRF_ECB=y
+# CONFIG_CRYPTO=y
+# CONFIG_CRYPTO_NRF_ECB=y
 
 # Cryptocell is not supported through CSPRNG driver API: NCSDK-4813
 CONFIG_ENTROPY_CC310=n
+
+CONFIG_BT=y
+CONFIG_BT_HCI=y
+CONFIG_BT_CTLR=y
+CONFIG_BT_LL_NRFXLIB=y
+CONFIG_BT_LL_NRFXLIB_DEFAULT=y
+CONFIG_SOC_FLASH_NRF_LL_NRFXLIB=y
