--- a/samples/zigbee/light_bulb/sample.yaml
+++ b/samples/zigbee/light_bulb/sample.yaml
@@ -2,6 +2,10 @@ sample:
   name: Zigbee Light control
   description: Zigbee Light control - light bulb sample
 tests:
+  samples.zigbee.light_bulb:
+    platform_whitelist: nrf52840dk_nrf52840
+    harness: zigbee
+    tags: zigbee
   zigbee.light_bulb:
     build_only: true
     build_on_all: true
