--- a/samples/zigbee/light_switch/sample.yaml
+++ b/samples/zigbee/light_switch/sample.yaml
@@ -2,6 +2,10 @@ sample:
   name: Zigbee Light switch
   description: Zigbee dimmable light switch based on ZBOSS stack
 tests:
+  samples.zigbee.light_switch:
+    platform_whitelist: nrf52840dk_nrf52840
+    harness: zigbee
+    tags: zigbee
   zigbee.light_switch:
     build_only: true
     build_on_all: true
