samples: zigbee: Get thread analyzer stats for light samples
Get thread analyzer stats for light samples. The stats are read
every 15 seconds and maximum values of used stack memory ared saved
instead of current ones.

Signed-off-by: Maciej Fabia <maciej.fabia@nordicsemi.no>

--- a/samples/zigbee/light_switch/CMakeLists.txt
+++ b/samples/zigbee/light_switch/CMakeLists.txt
@@ -13,6 +13,7 @@ project("Light Switch")
 # NORDIC SDK APP START
 target_sources(app PRIVATE
   src/main.c
+  src/thran.c
 )
 target_include_directories(app PRIVATE include)
 # NORDIC SDK APP END
