--- a/samples/zigbee/network_coordinator/CMakeLists.txt
+++ b/samples/zigbee/network_coordinator/CMakeLists.txt
@@ -13,5 +13,6 @@ project("Zigbee coordinator")
 # NORDIC SDK APP START
 target_sources(app PRIVATE
   src/main.c
+  src/thran.c
 )
 # NORDIC SDK APP END
