--- a/samples/zigbee/light_bulb/CMakeLists.txt
+++ b/samples/zigbee/light_bulb/CMakeLists.txt
@@ -13,5 +13,6 @@ project("Zigbee light bulb")
 # NORDIC SDK APP START
 target_sources(app PRIVATE
   src/main.c
+  src/thran.c
 )
 # NORDIC SDK APP END
