zigbee: non-minimal logger settings
Non-minimal logger,
standard tx slab

Signed-off-by: Maciej Fabia <maciej.fabia@nordicsemi.no>

--- a/samples/zigbee/network_coordinator/prj.conf
+++ b/samples/zigbee/network_coordinator/prj.conf
@@ -42,4 +42,15 @@ CONFIG_NET_IPV6_NBR_CACHE=n
 CONFIG_NET_IPV6_RA_RDNSS=n
 CONFIG_NET_IP_ADDR_CHECK=n
 CONFIG_NET_UDP=n
-CONFIG_NET_PKT_TX_COUNT=10
+#CONFIG_NET_PKT_TX_COUNT=10
+
+#logging
+CONFIG_ZBOSS_TRACE_LOG_LEVEL_DBG=y
+CONFIG_ZBOSS_TRACE_MASK=0x0448
+
+#logger
+CONFIG_LOG_MINIMAL=n
+CONFIG_LOG_PROCESS_THREAD_SLEEP_MS=500
+CONFIG_LOG_PROCESS_THREAD_STACK_SIZE=2000
+CONFIG_LOG_BUFFER_SIZE=4000
+#CONFIG_LOG_BACKEND_RTT=n
